--- a/static/tasks.css
+++ b/static/tasks.css
@@ -33,11 +33,18 @@ form.right-side {
 input, select, button {
 	margin: 1px 3px 2px 3px;
 }
+form img {
+  display: inline-block;
+  vertical-align: text-top;
+  height: 16px;
+  margin: -1px -2px 0px 0px;
+}
 select#task-lists-select option:nth-child(1) {
     font-weight:bold;
 }
 label#help-label {
 	text-decoration: underline;
+  margin-right: 6px;
 }
 label#help-label:hover {
 	cursor: pointer;
@@ -152,17 +159,12 @@ p.done:hover::after, p.canceled:hover::after, p.moved:hover::after {
 /* ===============================================================
    Styles of icons
    =============================================================== */
-li img, p img, label img, form img {
+li img, p img{
 	display: inline-block;
 	vertical-align: text-top;
 	height: 16px;
-}
-li img, p img {
   margin: -1px 2px 0px 0px;
   padding: 0px 0px 0px 2px;
-}
-label img, form img {
-  margin: -1px -2px 0px 0px;
 }
 .done img, .canceled img, .moved img {
 	opacity: 0.3;
